--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +14,14 @@
     "node": "^15.12.0",
     "nodemon": "^2.0.7",
     "socket.io": "^4.0.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jwee789/chat-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jwee789/chat-app/issues"
+  },
+  "homepage": "https://github.com/jwee789/chat-app#readme",
+  "description": ""
 }
